<resources>
    <string name="db_name">duties_db_temp</string>
    <string name="app_name">Duty helper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_exchange">Exchange</string>

    <string name="menu_home">Main</string>
    <string name="menu_duties">My duties</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_message">Messages</string>
    <string name="menu_logout">Logout</string>
    <string name="logout_title">Account</string>
    <string name="mainDutyTitle">The nearest duty</string>
    <string name="days_left">%d days left</string>
    <string name="today">Today!</string>
    <string name="no_duty">List of duties is empty</string>
    <string name="partner">Partners: </string>

    <string name="name">Name</string>
    <string name="duties_number">Number of duties in current month:</string>
    <string name="btn_diffs_commit_text">Commit changes</string>
    <string name="password">Password</string>
    <string name="show">show</string>
    <string name="edit_pass">Change password</string>
    <string name="edit_data">Change data</string>
    <string name="hide">hide</string>

    <string name="btn_neg_text">Cancel</string>
    <string name="btn_pos_text">OK</string>
    <string name="empty_fields_ex">Please, enter data</string>
    <string name="pass_tip">New password:</string>
    <string name="conf_pass_tip">Repeat new password:</string>
    <string name="conf_pass_ex">Passwords are not equals!</string>
    <string name="pass_length_ex">Password must have more then 6 symbols</string>
    <string name="pass_dialog_title">Password updating</string>
    <string name="pass_dialog_msg">Enter and confirm your password</string>

    <string name="duty_people_count">Position amount:</string>
    <string name="no_partners">You are on duty alone</string>

    <string name="tab_text_1">Info</string>
    <string name="tab_text_2">Statistics</string>

    <string name="test_partners">asd;lkasjdfjhalksdhfljkasbdflbasuiebiasdjkbajlshfdlasbdlfalsjkdfbaljsdbfhjlabsdfjasd</string>
    <string name="left_duty_time">Time lefted:</string>
    <string name="people_on_this_duty_title">People on this duty</string>
    <string name="main_duty_statistic">Duty by hours</string>
    <string name="duty_time">Period:</string>
    <string name="fio_ex">Incorrect fio</string>
    <string name="empty_fio_ex">Name, surname and patronymic cannot be empty</string>
    <string name="addr_ex">Address cannot be empty</string>
    <string name="phone_ex">Incorrect phone! (+375....)</string>
    <string name="addrTip">Address:</string>
    <string name="phoneTip">Phone:</string>
    <string name="birthDateTip">Birthdate:</string>

    <string name="goalPerson">Choice person to swap:</string>

    <string-array name="duty_interval_types">
        <item>future</item>
        <item>past</item>
        <item>all</item>
    </string-array>

    <string-array name="message_types">
        <item>sent</item>
        <item>received</item>
        <item>Sent not answered</item>
    </string-array>
    <string name="my_duty_title">Your duty:</string>
    <string name="myDuties">Choice your duty</string>
    <string name="duty_date">Duty date:</string>

    <string name="message_already_sent">Message on this duty already sent!</string>
    <string name="already_on_this_duty">You are already on this duty!</string>
    <string name="message_from">From:</string>
    <string name="message_to">To:</string>
    <string name="message_when">Duty time:</string>
    <string name="message_status_wait">Waiting for answer</string>
    <string name="message_status_confirm">Confirmed</string>
    <string name="message_status_declined">Declined</string>
    <string name="confirm_warning">Warning!</string>
    <string name="confirm_warning_text">This action can\'t be canceled. Continue?</string>
    <string name="goalPeopleOnDuty">Current Duty time:</string>
    <string name="not_equals_interval_length">Lengths of intervals were not equals! Try again</string>

    <string name="alert_reason">Alert reason:</string>
    <string-array name="alert_reasons">
        <item>Fire</item>
        <item>Meeting</item>
    </string-array>
    <string name="alert_custom">Custom</string>
    <string name="alert_from_list">From list</string>
    <string name="alert_description">Description:</string>
    <string name="choice_alert_type">Choice Alert Type</string>
    <string name="create_alert">Create Alert!</string>
    <string name="duty_type">Type of duty:</string>
    <string name="duty_link">More</string>
    <string name="your_duty">Your</string>
    <string name="other_duty">Other</string>
    <string name="onDuty">Duty</string>
    <string name="full_duty_time">Full time of duty:</string>
    <string name="you_work_on_the_same_time">You already work on that duty interval!</string>
    <string name="in_credit">in credit</string>

    <string name="change_notification_title">You have unread request for change</string>
    <string name="alert_notificatio_title">Allert</string>
    <string name="exchange_dialog_title">Configure exchange</string>
</resources>