<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/intervalExchangeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="jhgkfhjktj" />

    <TextView
        android:id="@+id/linkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duty_link"
        android:background="@drawable/bottom_border_blue_line"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/light_blue"
        app:layout_constraintTop_toTopOf="@id/intervalExchangeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvMsgDutyDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/duty_date"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervalExchangeTitle"/>

    <TextView
        android:id="@+id/tvMsgDutyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/coral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMsgDutyDateTitle" />

    <TextView
        android:id="@+id/tvIntervalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/message_when"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMsgDutyDateTitle" />

    <TextView
        android:id="@+id/tvInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/coral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvIntervalTitle" />

    <TextView
        android:id="@+id/tvMsgDutyTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/duty_type"
        android:textSize="17sp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIntervalTitle" />

    <TextView
        android:id="@+id/tvMsgDutyType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textSize="18sp"
        android:textColor="@color/coral"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMsgDutyTypeTitle"/>

    <TextView
        android:id="@+id/tvMsgDutyTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:text="@string/full_duty_time"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/tvMsgDutyDateTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvMsgDutyTypeTitle" />

    <TextView
        android:id="@+id/tvMsgDutyTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/coral"
        android:layout_marginEnd="15dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMsgDutyTimeTitle" />

    <TextView
        android:id="@+id/tvIntervalOwnerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/onDuty"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvIntervalTitle"
        app:layout_constraintTop_toBottomOf="@id/tvMsgDutyTimeTitle"/>

    <TextView
        android:id="@+id/tvIntervalOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textSize="18sp"
        android:textColor="@color/coral"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvIntervalOwnerTitle" />

    <View
        android:id="@+id/borderLine"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/tvIntervalOwnerTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>
